added handling for image duplication
